--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-Esto es un ejemplo de prueba para ver la interfaz gráfica de un commit con cambios de línea - Velez24 y Zuñiga24
+Esto es un ejemplo de prueba para ver la interfaz gráfica de un commit con cambios de línea - Velez24 y Zuñiga24 Versión 2
